SignatureRequestOriginal: fix collapsing ui

--- a/ui/components/app/signature-request-original/index.scss
+++ b/ui/components/app/signature-request-original/index.scss
@@ -153,7 +153,6 @@
     display: flex;
     flex-flow: column;
     flex: 1 1 auto;
-    height: 0;
   }
 
   &__origin-row {
@@ -193,7 +192,7 @@
 
   &__rows {
     height: 100%;
-    overflow-y: scroll;
+    overflow-y: auto;
     overflow-x: hidden;
     border-top: 1px solid var(--color-border-default);
     display: flex;
